# fl-lua

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
cmake/: vcpkg_bootstrap.cmake
lua_libs/llx/: cache.lua  check_arguments.lua  class.lua  core.lua  coroutine.lua  decorator.lua  enum.lua  environment.lua  flatten_submodules.lua  functional.lua  getclass.lua  hash.lua  hash_table.lua  init.lua  isinstance.lua  method.lua  operators.lua  property.lua  proxy.lua  repr.lua  schema.lua  signature.lua  string_view.lua  tointeger.lua  tostringf.lua  tracing.lua  truthy.lua  tuple.lua  type_check_decorator.lua
lua_libs/llx/bytecode/: bcode.lua  bytestream.lua  constants.lua  enum.lua  instructions.lua  opcodes.lua  typetags.lua  util.lua
lua_libs/llx/debug/: dump_value.lua  init.lua  print.lua  terminal_colors.lua  trace.lua
lua_libs/llx/exceptions/: exception.lua  exception_group.lua  index_error.lua  init.lua  invalid_argument_exception.lua  not_implemented_exception.lua  runtime_error.lua  schema_exception.lua  type_error.lua  value_exception.lua
lua_libs/llx/experimental/: export.lua  man.lua
lua_libs/llx/flow_control/: catch.lua  switchcase.lua  trycatch.lua
lua_libs/llx/strict/: disallow_globals.lua  init.lua
lua_libs/llx/types/: boolean.lua  float.lua  function.lua  init.lua  integer.lua  list.lua  matchers.lua  nil.lua  number.lua  set.lua  string.lua  table.lua  thread.lua  userdata.lua
lua_libs/llx/unit/: init.lua  matchers.lua  mock.lua  runner.lua  test.lua  test_api.lua  test_logger.lua
lua_libs/lua-midi/: event.lua  init.lua  instrument.lua  io.lua  midi_file.lua  track.lua  validation.lua
lua_libs/musica/: accidental.lua  articulation.lua  beat.lua  channel.lua  chord.lua  contour.lua  direction.lua  dynamics.lua  figure.lua  init.lua  interval_quality.lua  lilypond.lua  meter.lua  mode.lua  modes.lua  note.lua  pitch.lua  pitch_class.lua  pitch_interval.lua  pitch_util.lua  quality.lua  rhythm.lua  ring.lua  scale.lua  scale_degree.lua  scale_index.lua  song.lua  spiral.lua  tempo.lua  time_signature.lua  util.lua
lua_libs/musica/generation/: context.lua  generator.lua  init.lua  rule.lua
lua_libs/musica/generation/rules/: boundary.lua  composite.lua  duration.lua  in_scale.lua  init.lua  interval.lua  monotonic.lua  overshoot.lua  (+2 more)
scripts/examples/: arpeggiator.lua  euclidean.lua  hello_note.lua  scale_walk.lua
src/events/: event_queue.hpp  midi_event.hpp
src/gui/: console.cpp  console.hpp  dx11_context.cpp  dx11_context.hpp  editor.cpp  editor.hpp
src/lua/: api.cpp  api.hpp  engine.cpp  engine.hpp  sandbox.cpp  sandbox.hpp
src/plugin/: cids.hpp  controller.cpp  controller.hpp  entry.cpp  plugview.cpp  plugview.hpp  processor.cpp  processor.hpp  version.hpp
src/transport/: transport.hpp
